@@ -6,15 +6,15 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class FileUtils {
 
     public static List<Path> searchFile(String path, String endWith) throws IOException {
         try (Stream<Path> paths = Files.walk(Path.of(path))) {
-            return paths.filter(Files::isRegularFile).filter(p -> p.toString().endsWith(endWith))
-                .collect(Collectors.toList());
+            return paths.filter(Files::isRegularFile)
+                .filter(p -> p.toString().endsWith(endWith))
+                .toList();
         }
     }
 
